src/components/activity-completion/summary-table.scss
@import "../vars.scss";

.summary-table {
  border-collapse: collapse;
  border-top: solid 1px $cc-teal-dark1;
  border-right: solid 1px $cc-teal-dark1;
  margin-bottom: 20px;
  width: 100%;

  th, td {
    border-bottom: solid 1px $cc-teal-dark1;
    border-left: solid 1px $cc-teal-dark1;
    max-width: 0;
    overflow: hidden;
    padding: 5px;
    text-align: left;
    text-overflow: ellipsis;
    vertical-align: middle;
    &:nth-child(1) {
      width: 90%;
    }
    &:nth-child(2) {
      text-align: center;
    }

    svg {
      display: block;
      height: 24px;
      margin: 0 auto;
      width: 24px;

      &.complete {
        fill: $cc-teal-dark1;
      }
      &.incomplete {
        fill: $cc-orange-dark1;
      }
    }

    .question-meta {
      display: flex;
      flex-wrap: wrap;
      gap: 4px;

      .question-page-and-number {
        flex: 0 0 auto;

        a {
          appearance: none;
          background: transparent;
          border: none;
          color: $cc-charcoal;
          cursor: pointer;
          display: inline;
          font-family: "Lato", arial, helvetica, sans-serif;
          font-size: pxToRem(16);
          font-weight: normal;
          font-style: normal;
          letter-spacing: normal;
          margin: 0;
          outline: none;
          padding: 0;
          text-decoration: underline;
          text-transform: none;
          width: auto;
        }
      }
      .question-prompt {
        flex: 1;
        font-weight: normal;
      }
      .question-feedback {
        margin-top: 6px;

        &.no-prompt {
          margin-top: 0;
        }
      }
    }
  }
  th {
    background: $cc-teal-dark1;
    color: white;
    text-overflow: initial;
  }
  tr:nth-child(even) {
    background: $cc-teal-light7;
  }
}

